tests/pld-test-output/tests-Init-06_2_testAffChar/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:2: error: expected ‘,’ or ‘;’ before ‘return’
  return a;
  ^~~~~~

return code: 1
